Rewrote large chunks of code for API, Added PlayerLootEvent, Added LootBundle object to how items/commands/money/exp